# pat2vec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Main-MultiProc v3.9.4_publish.ipynb  Main-Pat2Vec v4.4.6-Time-Batch-Dev-lookback-Publish (1).ipynb  README.md  __init__.py  all_methods.py  api.rst  conf.py  generate_init.py  index.rst  install.bat  install.sh  install_lite.sh  install_lite_proxy.sh  install_pat2vec.sh  install_proxy.sh  list_functions.py  main_pat2vec.py  packages.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_lite.txt  requirements_lite_proxy.txt  requirements_proxy.txt  setup-hooks.sh  setup.py
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  notebook-test.yml  pypi-publish.yml  sync_github_releases_to_gitea.py
assets/: anonymisation_data_methods.mmd  config.mmd  data_pipeline.mmd  database_architecture.mmd  database_schema.mmd  ethnicity_abstractor.mmd  example_ingestion.mmd  example_usage.mmd  get_bmi.mmd  get_demographics.mmd  get_diagnostics.mmd  get_drugs.mmd  get_dummy_data_cohort_searcher.mmd  get_method_bloods.mmd  get_method_pat_annotations.mmd  get_news.mmd  get_smoking.mmd  get_treatment_docs_by_iterative_multi_term_cohort_searcher_no_terms_fuzzy.mmd  high_level_system_architecture.mmd  main.mmd  main_batch.mmd  methods_annotation.mmd  methods_annotation_flow.mmd  post_processing_anonymisation_high_level.mmd  post_processing_build_methods.mmd  system_architecture.mmd
config/: credentials_template.py
dev_test/: test_main.ipynb
docs/: FAQ config_class.md  FAQ.md
docs/source/: Architecture-and-Diagrams.md  Configuration-Guide.md  Contributing.md  Example-Searches-Guide.md  Frequently-Asked-Questions.md  Home.md  Installation.md  Searches.md  Usage.md  _Sidebar.md  api.rst  conf.py  index.rst
legacy/: Main-Pat2Vec v4.4.6-Time-Batch-Dev-lookback-Publish (1).ipynb  install_lite.sh  install_lite_proxy.sh  install_proxy.sh  requirements_lite.txt  requirements_lite_proxy.txt
notebooks/: _paths.py  example_ingestion.ipynb  example_searches_test.ipynb  example_usage live test.ipynb  example_usage.ipynb  example_usage_simple.ipynb  requirements.txt  sample_annotations.pickle  temp_annot_file.csv  test_notebook.py
notebooks/test_files/: dummy_timeline.csv  ipw_overlap.csv  sample_annotations.pickle  treatment_docs.csv
pat2vec/: __init__.py  all_methods.py  main_pat2vec.py
pat2vec/notebooks/: 2  example_usage.ipynb
pat2vec/pat2vec_get_methods/: __init__.py  current_pat_annotations_batch_to_file.py  current_pat_annotations_mrc_batch_to_file.py  get_method_appointments.py  get_method_bed.py  get_method_bloods.py  get_method_bmi.py  get_method_core02.py  get_method_core_resus.py  get_method_covid.py  get_method_current_pat_annotations_mrc_cs.py  get_method_demo.py  get_method_demographics.py  get_method_diagnostics.py  get_method_drugs.py  get_method_hosp_site.py  get_method_news.py  get_method_pat_annotations.py  get_method_report_annotations.py  get_method_smoking.py  get_method_textual_obs_annotations.py  get_method_vte_status.py
pat2vec/pat2vec_main_methods/: main_annotate_only.py  main_batch.py  main_main.py  main_multi.py  main_single_pat.py
pat2vec/pat2vec_pat_list/: __init__.py  get_patient_treatment_list.py
pat2vec/pat2vec_search/: cogstack_search_methods.py  data_helper_functions.py  matcher.py  nearest.py  search_helper_functions.py  search_multiprocess.py
pat2vec/patvec_get_batch_methods/: get_merged_batches.py  get_prefetch_batches.py  main.py  main_get_pat_batch_appointments.py  main_get_pat_batch_bloods.py  (+14 more)
pat2vec_get_methods/: __init__.py  backup_2_get_method_pat_annotations.py  current_pat_annotations_batch_to_file.py  current_pat_annotations_mrc_batch_to_file.py  current_pat_annotations_mrc_cs.py  current_pat_annotations_to_file.py  get_method_bed.py  get_method_bloods.py  get_method_bmi.py  get_method_core02.py  get_method_core_resus.py  get_method_current_pat_annotations_mrc_cs.py  get_method_demo.py  get_method_demographics.py  get_method_diagnostics.py  get_method_drugs.py  get_method_hosp_site.py  get_method_news.py  get_method_pat_annotations.py  get_method_smoking.py  get_method_vte_status.py
pat2vec_main_methods/: main_annotate_only.py  main_batch.py  main_main.py  main_multi.py  main_single_pat.py  patmaker_main.py
pat2vec_pat_list/: get_patient_treatment_list.py
patvec_get_batch_methods/: main.py
test_files/: elastic_schemas.json  read_test_file.py  sample_annotations.pickle  treatment_docs.csv
util/: clone_pat2vec_notebook.ipynb  config_pat2vec.py  credentials.py  current_pat_batch_path_methods.py  elasticsearch_methods.py  ethnicity_abstractor.py  evaluation_methods.py  evaluation_methods_ploting.py  example_usage.ipynb  get_dummy_data_cohort_searcher.py  methods_annotation.py  methods_get.py  methods_get_medcat.py  methods_post_get.py  post_processing.py  post_processing_build_methods.py  presentation_methods.py
(+110 files in other folders)
